feat: Enhance accessibility and improve UI components
- Updated Header component to improve focus styles and mobile menu functionality.
- Added static fallback for reduced motion in HeroScene component.
- Enhanced PortfolioCard with better accessibility attributes and hover effects.
- Improved BaseLayout with Open Graph meta tags and skip link for accessibility.
- Refactored About, Blog, and Portfolio pages to use site configuration for titles and descriptions.
- Introduced new utility classes in global CSS for better styling consistency.
- Updated Tailwind configuration to include new animations and font families.
- Adjusted TypeScript configuration to allow implicit any types.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@/*": ["src/*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "astro"
+    "jsxImportSource": "astro",
+    "noImplicitAny": false
   }
 }
